added little js
added 2 more file
added on click and im coments
changed the video location
added gif to coments
padded nav
hover effect on contents

--- a/casestudy.html
+++ b/casestudy.html
@@ -16,12 +16,13 @@
         <center style="color: f3eff5">RECIPIES <span style="color: 72b01d">AT </span>YOUR FINGER TIPS</center>
     </h1>
     <center>
-        <a href="contents.html"><img src="hiclipart.com(2).png" usemap="#click_area">
+        <img src="hiclipart.com(2).png" usemap="#click_area">
+        <a href="contents.html">
             <figcaption onmouseover="this.innerHTML='THE NOSE!'">click on the rat's nose</figcaption>
         </a>
     </center>
     <map name="click_area">
-        <area shape="rect" coords="300, 300, 44, 44" href="contents.html" alt="rat_picture">
+        <area shape="rect" coords="420, 890, 500, 950" href="contents.html" alt="rat_picture">
         
         
     </map>
