--- a/contents.html
+++ b/contents.html
@@ -11,11 +11,7 @@
     <style>
         @import url(stylesheet.css);
     </style>
-    <script>
-        function tandoori() {
-            this.innerText = '<a href="final.html"><img src="tandoori2.jpg" height="169" width="254"></a>'
-        }
-    </script>
+
 
 </head>
 
@@ -23,13 +19,13 @@
     <h1>
         <center>RECIPIES<span style="color: 72b01d"> AT </span>YOUR FINGER TIPS</center>
     </h1>
-    <center><label>CHICKEN TANDOORI</label><br>
-        <a href="final.html"><img src="Tandoori-Roasted-Chicken.jpg" height="169" width="254" onmouseover="tandoori()"></a>
-    </center>
+    <center><label>CHICKEN TANDOORI<br>
+        <a href="final.html"><img src="Tandoori-Roasted-Chicken.jpg" height="169" width="254" onmouseover="this.src = 'tandoori2.jpg'" onmouseout="this.src='Tandoori-Roasted-Chicken.jpg'"></a>
+    </center></label>
     <br>
-    <center><label>BAMBOO BRIYANI</label><br>
-        <a href="copy file1.html"><img src="BAMBOO.jpg" height="169" width="254"></a>
-    </center>
+    <center><label>BAMBOO BRIYANI<br>
+        <a href="copy file1.html"><img src="BAMBOO.jpg" height="169" width="254" onmouseover="this.src = 'bb2.jpg'" onmouseout="this.src='BAMBOO.jpg'"></a>
+    </center></label>
 
 </body>
 
