--- a/copy file1.html
+++ b/copy file1.html
@@ -34,6 +34,7 @@
         width: 15%;
         background: #2F3534;
         height: 2500px;
+        padding-left: 25px;
     }
     
     nav ul {
@@ -72,10 +73,11 @@
                 <center>BAMBOO <span class="green">CHICKEN BIRIYANI</span></center>
             </h1>
             <center><img src="BAMBOO.jpg" height="570" width="900">
-                <figcaption><strong>BAMBOO <span class="green">CHICKEN</span></strong></figcaption>
+                <figcaption><strong>BAMBOO <span class="green">CHICKEN BIRIYANI</span></strong></figcaption>
             </center>
             <p>
                 <h3>INGRIDIENTS</h3>
+                
                 <ul>
                     <li>For grilled prawn - 8 big prawns deveined,deshelled with tails intact</li>
                     <li> cumin powder 2 tbsp</li>
@@ -83,6 +85,7 @@
                     <li>salt 5 teaspoon</li>
                     <li>lime juice 2 teaspoon</li>
                     <li>chili powder 3 tablespoon</li>
+                    <iframe width="750" height="450" src="https://www.youtube.com/embed/4Hw2QXSVUHs" align="right"></iframe>
                     <li>hung curd 4 tablespoon</li>
                     <li>ginger garlic paste 3 tablespoon</li>
                     <li> For bhetki balls - paste of boneless bhetki 1 cup</li>
@@ -173,11 +176,8 @@
                     <td>Carbohydrates</td>
                     <td>24.00g</td>
                 </tr>
-
             </table>
-            <center><iframe width="1120" height="630" src="https://www.youtube.com/embed/4Hw2QXSVUHs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </center>
-
         </article>
     </section>
 </body>
