--- a/aboutus.html
+++ b/aboutus.html
@@ -5,7 +5,7 @@
     <title>ABOUT US </title>
     <link rel="icon" href="hiclipart_com_4___co_Zj9UP.ico" type="image/x-icon">
     <h1 style="font-family: cursive">
-        <center style="color: f3eff5"><img src="hiclipart.com(1).png" alt="rat picture" width="110" height="200">RATATOUILLE <span style="color:72b01d">COOKS</span></center>
+    <center style="color: f3eff5"><img src="hiclipart.com(1).png" alt="rat picture" width="110" height="200">RATATOUILLE <span style="color:72b01d">COOKS</span></center>
     </h1>
     <hr>
     <style>
@@ -13,6 +13,12 @@
             text-decoration: no;
         }
     </style>
+    <script>
+        function giff(){
+            document.getElementById('gif').innerHTML = '<img src="200.gif">'; //replacing the gif file
+        }
+
+    </script>
 
 </head>
 
@@ -28,14 +34,14 @@
         <h3 style="font-family: cursive; color: f3eff5">contact: <a href="kishoremeenakshi2001@gmail.com" style="color: chartreuse">kishoremeenakshi2001@gmail.com</a></h3>
         <br>
         <form style="color: white"><label style="font-family: cursive"> <strong>RATE US :</strong></label><br>
-            <input type="radio" name="rating">0
-            <input type="radio" name="rating">1
-            <input type="radio" name="rating">2
-            <input type="radio" name="rating">3
-            <input type="radio" name="rating">4
-            <input type="radio" name="rating" checked>5<br>
-            <h3 style="color: white"><label style="font-family: cursive"> <strong>COMMENTS :</strong></label></h3>
-            <textarea style="background-color: black;" rows="10" cols="50" placeholder="add comments"></textarea><br>
+            <input type="radio" name="rating">😭
+            <input type="radio" name="rating">🥺
+            <input type="radio" name="rating">😶
+            <input type="radio" name="rating">😊
+            <input type="radio" name="rating">😄
+            <input type="radio" name="rating" checked>😘<br>
+            <h3 style="color: white"><label style="font-family: cursive"> <strong id="gif">COMMENTS :</strong></label></h3>
+            <textarea style="background-color: black;" rows="10" cols="50" placeholder="add comments" onfocus="giff()"></textarea><br>
             <link rel="stylesheet" href="stylesheet.css"><br>
             <a href="vj.html"><input type="button" class="green button" value="submit"></a>
     </p>
