--- a/final.html
+++ b/final.html
@@ -34,13 +34,13 @@
         width: 15%;
         background: #2F3534;
         height: 2500px;
+        padding-left: 25px;
     }
     
     nav ul {
         list-style-type: disc;
         padding: 0;
     }
-    
     article {
         float: left;
         padding: 20px;
@@ -77,6 +77,7 @@
             <p>
                 <center>Make tandoori chicken on your grill! Chicken legs marinated in lemon juice, yogurt, and aromatic spices.</center>
                 <h3>INGRIDIENTS</h3>
+                <iframe width="600" height="350" src="https://www.youtube.com/embed/6jYZI4kgMz0" align="right"></iframe>
                 <ul>
                     <li>3 Tbsp vegetable oil</li>
                     <li>1 teaspoon ground coriander</li>
@@ -150,7 +151,6 @@
                 </tr>
 
             </table>
-            <center><iframe width="1120" height="630" src="https://www.youtube.com/embed/6jYZI4kgMz0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
         </article>
     </section>
 </body>
