--- a/aboutus.html
+++ b/aboutus.html
@@ -31,7 +31,7 @@
         <center>We help you in bringing world class recepies at your finger tips.</center>
     </h2>
     <p><img src="hiclipart.com(6).png" align="left">
-        <h3 style="font-family: cursive; color: f3eff5">contact: <a href="kishoremeenakshi2001@gmail.com" style="color: chartreuse">kishoremeenakshi2001@gmail.com</a></h3>
+        <h3 style="font-family: cursive; color: f3eff5">contact: <a href="mailto: kishoremeenakshi2001@gmail.com" style="color: chartreuse">kishoremeenakshi2001@gmail.com</a></h3>
         <br>
         <form style="color: white"><label style="font-family: cursive"> <strong>RATE US :</strong></label><br>
             <input type="radio" name="rating">😭
