--- a/copy file1.html
+++ b/copy file1.html
@@ -64,7 +64,8 @@
             <ul type="square">
                 <li><a href="contents.html"><strong class="green">HOME</strong> </a></li><br>
                 <li><a href="final.html"><strong class="green">TANDOORI CHICKEN</strong></a></li><br>
-                <li><a href="aboutus.html"><strong class="green">ABOUT US</strong></a></li>
+                <li><a href="aboutus.html"><strong class="green">ABOUT US</strong></a></li><br>
+                <li><a href="donate.html"><strong class="green">DONATE</strong></a></li>
             </ul>
         </nav>
 
@@ -129,6 +130,7 @@
                     <li>Add salt with Maida and corn flour and mix well.</li>
                     <li>Now make the ball like dumplings with bhetki fish paste and roll it into corn flour and Maida mixture.</li>
                     <li>Heat up 1 tbsp oil in the pan</li>
+                    <img src="hiclipart.com(13) (copy).png" width="600" height="900" alt="spoon rat" align="right">
                     <li>Fry the fish Balls for 2 minutes.</li>
                     <li>Grill the prawn in a preheated oven @180 degree for 10 minutes.</li>
                     <li>Brush oil meanwhile</li>
