--- a/final.html
+++ b/final.html
@@ -5,7 +5,7 @@
     <title>TANDOORI CHICKEN</title>
     <link rel="icon" href="hiclipart_com_4___co_Zj9UP.ico" type="image/x-icon">
     <h1 style="font-family: cursive">
-        <center style="color: f3eff5"><img src="hiclipart.com(1).png" alt="rat picture" width="120" height="200">RATATOUILLE <span style="color:72b01d">COOKS</span></center>
+        <center style="color: f3eff5"><img src="hiclipart.com(1).png" alt="rat picture" width="110" height="200">RATATOUILLE <span style="color:72b01d">COOKS</span></center>
     </h1>
     <hr>
 
@@ -63,7 +63,8 @@
             <ul type="square">
                 <li><a href="contents.html"><strong class="green">HOME</strong> </a></li><br>
                 <li><a href="copy file1.html"><strong class="green">BAMBOO BIRIYANI</strong></a></li><br>
-                <li><a href="aboutus.html"><strong class="green">ABOUT US</strong></a></li>
+                <li><a href="aboutus.html"><strong class="green">ABOUT US</strong></a></li><br>
+                <li><a href="donate.html"><strong class="green">DONATE</strong></a></li>
             </ul>
         </nav>
 
@@ -128,6 +129,7 @@
                 </ol>
             </p>
             <h3>NUTRITION <span class="green">FACTS</span></h3>
+            <img src="hiclipart.com(8) (copy).png" alt="rat friends" align="right">
             <table border="1">
                 <tr>
                     <th>NUTRITION</th>
