--- a/contents.html
+++ b/contents.html
@@ -19,12 +19,14 @@
     <h1>
         <center>RECIPIES<span style="color: 72b01d"> AT </span>YOUR FINGER TIPS</center>
     </h1>
-    <center><label>CHICKEN TANDOORI<br>
-        <a href="final.html"><img src="Tandoori-Roasted-Chicken.jpg" height="169" width="254" onmouseover="this.src = 'tandoori2.jpg'" onmouseout="this.src='Tandoori-Roasted-Chicken.jpg'"></a>
+    <center><a href="final.html"><label>CHICKEN TANDOORI<br>
+        <img src="Tandoori-Roasted-Chicken.jpg" height="169" width="254" onmouseover="this.src = 'tandoori2.jpg'" onmouseout="this.src='Tandoori-Roasted-Chicken.jpg'">
+        </a>
     </center></label>
     <br>
-    <center><label>BAMBOO BRIYANI<br>
-        <a href="copy file1.html"><img src="BAMBOO.jpg" height="169" width="254" onmouseover="this.src = 'bb2.jpg'" onmouseout="this.src='BAMBOO.jpg'"></a>
+    <center><a href="copy file1.html"><label>BAMBOO BRIYANI<br>
+        <img src="BAMBOO.jpg" height="169" width="254" onmouseover="this.src = 'bb2.jpg'" onmouseout="this.src='BAMBOO.jpg'">
+        </a>
     </center></label>
 
 </body>
