--- a/donate.html
+++ b/donate.html
@@ -1,14 +1,9 @@
 <html>
 
 <head>
-    <script>
-        function tex(){
-            elm = document.getElementById("tex");
-            if(!isNaN(elem.innerText())){
-                window.alert("Enter number");
-            }
-        }
-    </script>
+    <script type="javascript" src="javascript.js">
+    
+        </script>
     <style>
         @import url(stylesheet.css);
     </style>
@@ -28,9 +23,9 @@
         <article style="float: inline-end;padding-right: 100px;">
             DONATE <span class="green">HERE</span><br>
             <center>ENTER <span class="green">AMOUNT:</span></center><br>
-            <input type="text" style="color: black;" id="tex"<br>
+            <input type="text" style="color: black;" id="tex"><br>
             <br>
-            <a href="" class="button green" onsubmit="tex()">Donate!</a>
+            <input type="button" class="button green" onclick="texu()" value="Donate">
         </article>
     </section>
 
