--- a/donate.html
+++ b/donate.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <script type="javascript" src="javascript.js">
+    <script type="text/javascript" src="javascript.js">
     
         </script>
     <style>
