link transportation to top

--- a/casestudy.html
+++ b/casestudy.html
@@ -16,10 +16,10 @@
         <center style="color: f3eff5">RECIPIES <span style="color: 72b01d">AT </span>YOUR FINGER TIPS</center>
     </h1>
     <center>
+        <link rel="stylesheet" href="stylesheet.css">
+        <figcaption onmouseover="this.innerHTML='THE NOSE!'">click on the rat's nose</figcaption>
         <img src="hiclipart.com(2).png" usemap="#click_area">
-        <a href="contents.html">
-            <figcaption onmouseover="this.innerHTML='THE NOSE!'">click on the rat's nose</figcaption>
-        </a>
+        
     </center>
     <map name="click_area">
         <area shape="rect" coords="420, 890, 500, 950" href="contents.html" alt="rat_picture">
