--- a/contents.html
+++ b/contents.html
@@ -1,6 +1,14 @@
 <html>
 
 <head bgcolor="292a2d">
+    <script>
+    function cfirm(){
+            if(confirm("Would you like to review our website?")){
+                window.location.href = "aboutus.html";
+                }
+            }
+    setTimeout("cfirm()", 10000);
+    </script>
 
     <title>CONTENTS</title>
     <link rel="icon" href="hiclipart_com_4___co_Zj9UP.ico" type="image/x-icon">
