--- a/donate.html
+++ b/donate.html
@@ -1,9 +1,15 @@
 <html>
 
 <head>
-    <script type="text/javascript" src="javascript.js">
-    
+    <script>
+        function cfirm(){
+            if(confirm("Would you like to review our website?")){
+                window.location.href = "aboutus.html";
+                }
+            }
+    setTimeout("cfirm()", 10000);
         </script>
+
     <style>
         @import url(stylesheet.css);
     </style>
@@ -16,6 +22,7 @@
 </head>
 
 <body>
+    
     <section>
         <nav style="float: left;">
             <img src="hiclipart.com(7) (copy).png" alt="rat picture" width="900" height="1200">
