--- a/final.html
+++ b/final.html
@@ -2,6 +2,17 @@
 
 <head bgcolor="292a2d">
 
+    <script>
+    function cfirm(){
+        function cfirm(){
+            if(confirm("Would you like to review our website?")){
+                window.location.href = "aboutus.html";
+                }
+            }
+    setTimeout("cfirm()", 10000);
+    </script>
+
+
     <title>TANDOORI CHICKEN</title>
     <link rel="icon" href="hiclipart_com_4___co_Zj9UP.ico" type="image/x-icon">
     <h1 style="font-family: cursive">
