--- a/copy file1.html
+++ b/copy file1.html
@@ -10,7 +10,57 @@
     <hr>
 
 </head>
+
+<script>
+    function myFunction() {
+      var input, caps, ul, li, a, i, txtValue;
+      input = document.getElementById('SearchInput');
+      caps = input.value.toUpperCase();
+      ul = document.getElementById("contents");
+      li = ul.getElementsByTagName('li');
+     
+    
+      for (i = 0; i < li.length; i++) {
+        a = li[i].getElementsByTagName("a")[0];
+        txtValue = a.textContent || a.innerText;
+        if (txtValue.toUpperCase().indexOf(caps) > -1) {
+          li[i].style.display = "";
+        } else {
+          li[i].style.display = "none";
+        }
+      }
+    }
+</script>
 <style>
+    #SearchInput {
+  background-position: 10px 12px; 
+  background-repeat: no-repeat; 
+  width: 90%; 
+  font-size: 16px;
+  padding: 12px 20px 12px 10px; 
+  border: 1px solid #ddd; 
+  margin-bottom: 12px;
+}
+
+#contents {
+
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+#contents li a {
+  border: 1px solid #ddd; 
+  margin-top: -1px;
+ background: #2F3534;
+  padding: 12px; 
+  text-decoration: none;
+  font-size: 18px; 
+  color:72b01d; 
+  display: block; 
+  width: 90% ;
+}
+
     @import url(stylesheet.css);
     * {
         box-sizing: border-box;
@@ -62,10 +112,16 @@
     <section>
         <nav>
             <ul type="square">
-                <li><a href="contents.html"><strong class="green">HOME</strong> </a></li><br>
-                <li><a href="final.html"><strong class="green">TANDOORI CHICKEN</strong></a></li><br>
-                <li><a href="aboutus.html"><strong class="green">ABOUT US</strong></a></li><br>
-                <li><a href="donate.html"><strong class="green">DONATE</strong></a></li>
+                <li style="color: 72b01d;"><a href="contents.html"><strong style="color: 72b01d;">HOME</strong> </a></li><br>
+                <li style="color: 72b01d;"><a href="copy file1.html"><strong style="color: 72b01d;">BAMBOO BIRIYANI</strong></a></li><br>
+                <li style="color: 72b01d;"><a href="aboutus.html"><strong style="color: 72b01d;">ABOUT US</strong></a></li><br>
+                <li style="color: 72b01d;"><a href="donate.html"><strong style="color: 72b01d;">DONATE</strong></a></li>
+            </ul>
+            <input type="text" id="SearchInput" onkeyup="myFunction()" placeholder="Search for Recipies">
+
+            <ul id="contents">
+              <li><a href="copy file1.html">Bamboo Chicken</a></li>
+              <li><a href="final.html">Tandoori</a></li>
             </ul>
         </nav>
 
