--- a/copy file1.html
+++ b/copy file1.html
@@ -84,6 +84,7 @@
     }
 
     #SearchInput {
+  color: 72b01d;
   background-position: 10px 12px; 
   background-repeat: no-repeat; 
   width: 90%; 
