--- a/donate.html
+++ b/donate.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <script>
+    <script type="text/javascript" src="javascript.js">
         function cfirm(){
             if(confirm("Would you like to review our website?")){
                 window.location.href = "aboutus.html";
