--- a/copy file1.html
+++ b/copy file1.html
@@ -67,12 +67,12 @@
         width: 15%;
         background: #2F3534;
         height: 2500px;
-        padding-left: 25px;
+        padding-left: 10px;
     }
     
     nav ul {
         list-style-type: disc;
-        padding: 0;
+        padding: 25px;
     }
     
     article {
@@ -126,7 +126,7 @@
         <nav>
             <ul type="square">
                 <li style="color: 72b01d;"><a href="contents.html"><strong style="color: 72b01d;">HOME</strong> </a></li><br>
-                <li style="color: 72b01d;"><a href="copy file1.html"><strong style="color: 72b01d;">BAMBOO BIRIYANI</strong></a></li><br>
+                <li style="color: 72b01d;"><a href="final.html"><strong style="color: 72b01d;">TANDOORI CHICKEN</strong></a></li><br>
                 <li style="color: 72b01d;"><a href="aboutus.html"><strong style="color: 72b01d;">ABOUT US</strong></a></li><br>
                 <li style="color: 72b01d;"><a href="donate.html"><strong style="color: 72b01d;">DONATE</strong></a></li>
             </ul>
@@ -135,7 +135,8 @@
             <ul id="contents">
               <li><a href="copy file1.html">Bamboo Chicken</a></li>
               <li><a href="final.html">Tandoori</a></li>
-            </ul>
+            </ul><br>
+            <img src="bamboo.png" alt="qr_bamboo">
         </nav>
 
         <article>
