--- a/final.html
+++ b/final.html
@@ -44,12 +44,12 @@
         width: 15%;
         background: #2F3534;
         height: 2500px;
-        padding-left: 25px;
+        padding-left: 10px;
     }
     
     nav ul {
         list-style-type: disc;
-        padding: 0;
+        padding: 25px;
     }
     article {
         float: left;
@@ -60,7 +60,7 @@
     }
 
     #SearchInput {
-        color: 72b01d;
+  color: 72b01d;
   background-position: 10px 12px; 
   background-repeat: no-repeat; 
   width: 90%; 
@@ -132,7 +132,9 @@
             <ul id="contents">
               <li><a href="copy file1.html">Bamboo Chicken</a></li>
               <li><a href="final.html">Tandoori</a></li>
-            </ul>
+            </ul><br>
+            <br>
+            <img src="tandoori.png" alt="qr_tandoori">
         </nav>
 
         <article>
